--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: CI
 
 on:
-  pull_request:
+  push:
     branches:
     - master
  
@@ -13,15 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-    - uses: azure/k8s-actions/k8s-set-context@master
-      with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
-    - uses: azure/k8s-actions/k8s-deploy@master
-      with:
-        manifests: |
-          test.yaml
+      run: docker version
