--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,5 +12,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: docker build -t ci-test .
+
+    - uses: azure/docker-login@v1
+          with:
+            login-server: contoso.azurecr.io
+            username: ${{ secrets.REGISTRY_USERNAME }}
+            password: ${{ secrets.REGISTRY_PASSWORD }}
+        - run: |
+             docker build -t ci-test .
+             docker push ci-test
