--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,5 +18,5 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build -t ci-test .
-        docker push ci-test
+        docker build -t qianchenglong/ci-test .
+        docker push qianchenglong/ci-test
